kube-load-balancer/manifiestos/read-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-service-deployment
  labels:
    app: read-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: read-service
  template:
    metadata:
      labels:
        app: read-service
    spec:
      containers:
      - name: read-service
        image: localhost/cqrs-kube/read-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /read/health
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /read/health
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 15
