kube-load-balancer/manifiestos/write-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: write-service-deployment
  labels:
    app: write-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: write-service
  template:
    metadata:
      labels:
        app: write-service
    spec:
      containers:
      - name: write-service
        image: localhost/cqrs-kube/write-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /write/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /write/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
