kube-load-balancer/manifiestos/read-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: read-service
  labels:
    app: read-service
spec:
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: read-service
