kube-load-balancer/manifiestos/write-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: write-service
  labels:
    app: write-service
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: write-service
